fixed the scrolling and reduced the padding - 128px is way too large. brought it down to 2rem from 8rem and damn does it look better imo.

--- a/css/creative.css
+++ b/css/creative.css
@@ -10007,7 +10007,7 @@ hr.light {
 }
 
 .page-section {
-  padding: 8rem 0;
+  padding: 2rem 0;
 }
 
 #mainNav {
